--- a/SimplyTotalCommander/UnZipFileWindow.xaml
+++ b/SimplyTotalCommander/UnZipFileWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SimplyTotalCommander.ZipFileWindow"
+﻿<Window x:Class="SimplyTotalCommander.UnZipFileWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,7 +12,7 @@
     <Grid>
         <StackPanel>
         <DockPanel Width="550" Height="50">
-        <TextBlock Text="File to zip : " />
+        <TextBlock Text="File to unzip : " />
                 <TextBlock x:Name="fileName" Text="{Binding fileName}" />
                 <TextBlock x:Name="filePath" Visibility="Hidden" Text="{Binding path}" />
                 <TextBlock x:Name="fileExtension" Visibility="Hidden" Text="{Binding extension}" />
@@ -20,11 +20,11 @@
             <DockPanel Width="550" Height="50">
                 <TextBlock  Width="150" Height="20" Text="Choose destiny folder : " />
                 <TextBlock x:Name="destinyPath" Text="{Binding directoryPath}"  Width="250" Height="20"/>
-                <Button x:Name="chooseFolder" Width="20" Height="20" Click="ChooseDestinyZipPath">...</Button>
+                <Button x:Name="chooseFolder" Width="20" Height="20" Click="ChooseDestinyUnZipPath">...</Button>
             </DockPanel>
         <DockPanel Width="300">
-                <Button  x:Name="acceptButton" Width="90" Height="30" Click="AcceptZipFile">Zip single File</Button>
-            <Button Width="50" Height="30" Margin="10" Click="CancelZip">Close</Button>
+                <Button  x:Name="acceptButton" Width="90" Height="30" Click="AcceptUnZipFile">Unzip file</Button>
+            <Button Width="50" Height="30" Margin="10" Click="CancelUnZip">Close</Button>
         </DockPanel>
                 <TextBlock x:Name="choosePathError" Width="150" Foreground="Red"></TextBlock>
         <ProgressBar x:Name="progressBar" Width="450" Height="30" Margin="50" Visibility="Hidden"></ProgressBar>
