--- a/SimplyTotalCommander/UnZipFileWindow.xaml
+++ b/SimplyTotalCommander/UnZipFileWindow.xaml
@@ -5,26 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimplyTotalCommander"
         mc:Ignorable="d"
-        WindowStyle="ToolWindow"
-        Background="Gray"    
+        WindowStyle="ToolWindow"   
         WindowStartupLocation="CenterOwner"
+        FontFamily="{StaticResource RexBold}" FontSize="20" Foreground="GhostWhite"
         Title="Zip file" Height="300" Width="800">
     <Grid>
-        <StackPanel>
-        <DockPanel Width="550" Height="50">
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/mainBackground.png"/>
+        </Grid.Background>
+        <StackPanel Margin="0,10">
+        <DockPanel Width="700" Height="50">
         <TextBlock Text="File to unzip : " />
                 <TextBlock x:Name="fileName" Text="{Binding fileName}" />
                 <TextBlock x:Name="filePath" Visibility="Hidden" Text="{Binding path}" />
                 <TextBlock x:Name="fileExtension" Visibility="Hidden" Text="{Binding extension}" />
             </DockPanel>
-            <DockPanel Width="550" Height="50">
-                <TextBlock  Width="150" Height="20" Text="Choose destiny folder : " />
-                <TextBlock x:Name="destinyPath" Text="{Binding directoryPath}"  Width="250" Height="20"/>
-                <Button x:Name="chooseFolder" Width="20" Height="20" Click="ChooseDestinyUnZipPath">...</Button>
+            <DockPanel Width="700" Height="30">
+                <TextBlock  Width="220" Height="20" Text="Choose destiny folder : " />
+                <TextBlock x:Name="destinyPath" Text="{Binding directoryPath}"  Width="400" Height="20"/>
+                <Button x:Name="chooseFolder" Width="30" Height="30" Click="ChooseDestinyUnZipPath">...</Button>
             </DockPanel>
-        <DockPanel Width="300">
+        <DockPanel Width="300" Margin="0,50">
                 <Button  x:Name="acceptButton" Width="90" Height="30" Click="AcceptUnZipFile">Unzip file</Button>
-            <Button Width="50" Height="30" Margin="10" Click="CancelUnZip">Close</Button>
+            <Button Width="60" Height="30" Margin="10" Click="CancelUnZip">Close</Button>
         </DockPanel>
                 <TextBlock x:Name="choosePathError" Width="150" Foreground="Red"></TextBlock>
         <ProgressBar x:Name="progressBar" Width="450" Height="30" Margin="50" Visibility="Hidden"></ProgressBar>
