add new file option + window + methods

--- a/SimplyTotalCommander/WindowControl.xaml
+++ b/SimplyTotalCommander/WindowControl.xaml
@@ -98,6 +98,7 @@
                     <CommandBinding Command="Delete" Executed="Delete_Executed" />
                     <CommandBinding Command="{x:Static local:CustomCommands.ZipIt}" Executed="zipFile_Executed" />
                     <CommandBinding Command="{x:Static local:CustomCommands.UnZipIt}" Executed="unZipFile_Executed" />
+                    <CommandBinding Command="{x:Static local:CustomCommands.NewFile}" Executed="NewFile_Executed" />
                     <CommandBinding Command="Properties" Executed="openProperties_Executed" />
                 </DataGrid.CommandBindings>
                 <!-- Short cuts in right click menu -->
@@ -137,7 +138,7 @@
                                 <Image Source="Images/delete.png"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="_New File" Command="ApplicationCommands.New" >
+                        <MenuItem Header="_New File" Command="{x:Static local:CustomCommands.NewFile}" >
                             <MenuItem.Icon>
                                 <Image Source="Images/new.png"/>
                             </MenuItem.Icon>
