--- a/SimplyTotalCommander/ZipFileWindow.xaml
+++ b/SimplyTotalCommander/ZipFileWindow.xaml
@@ -27,7 +27,7 @@
             </DockPanel>
         <DockPanel Width="300" Margin="0,50">
                 <Button  x:Name="acceptButton" Width="90" Height="30" Click="AcceptZipFile">Zip File</Button>
-            <Button Width="60" Height="30" Margin="10" Click="CancelZip">Close</Button>
+            <Button x:Name="cancelButton" Width="60" Height="30" Margin="10" Click="CancelZip">Close</Button>
         </DockPanel>
                 <TextBlock x:Name="choosePathError" Width="150" Foreground="Red"></TextBlock>
         <ProgressBar x:Name="progressBar" Width="450" Height="30" Margin="50"></ProgressBar>
