--- a/SimplyTotalCommander/WindowControl.xaml
+++ b/SimplyTotalCommander/WindowControl.xaml
@@ -13,14 +13,13 @@
         <ImageBrush ImageSource="Images/mainBackground.png"/>
     </UserControl.Background>
     <Viewbox Margin="15" VerticalAlignment="Top" HorizontalAlignment="Left">
-        <DockPanel LastChildFill="False">
+        <DockPanel>
 
             <!-- *** Showing direcroies tree *** -->
             <ListView x:Name="ListOfDirectory"
                       DockPanel.Dock="Left"
                       Foreground="White"
                       FontFamily="{StaticResource RexBold}"
-
                       Height="550"
                       SelectionChanged="DataGridOfDirectories_SelectionChanged" RenderTransformOrigin="0.5,0.5">
                 <ListView.Background>
@@ -36,9 +35,7 @@
                         <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_PreviewMouseLeftButtonDown" />
                         <Setter Property="ToolTip">
                             <Setter.Value>
-                                <UniformGrid Columns="1">
-                                    <TextBlock Text="{Binding ListViewItem}"/>
-                                </UniformGrid>
+                                <TextBlock Text="Double Click folder to open"/>
                             </Setter.Value>
                         </Setter>
                     </Style>
